# Fastest-Editor

./: CMakeLists.txt  HandleMode.cpp  HandleMode.h  HandleWriting.cpp  HandleWriting.h  HelperFunctions.cpp  HelperFunctions.h  Initialize.cpp  Initialize.h  Logic.cpp  Logic.h  ModeEnum.h  Modes.h  README.md  StartScreen.h  UserInputs.cpp  UserInputs.h  main.cpp
